--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "devDependencies": {
     "angular": "^1.4.8",
     "angular-mocks": "^1.4.8",
-    "karma": "^0.13.15"
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6"
   },
   "scripts": {
     "test": "./node_modules/.bin/karma run"
