--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@git.saucybattle.com/projects/angular-logger.git"
+    "url": "https://github.com/roberthodgen/angular-logger.git"
   },
   "author": "Robert Hodgen",
   "license": "MIT"
